changes to test publish and that all works

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
 <p>something to see that this works<p>
+	<p> just adding this to check git and all settings through to publish</p>
 </body>
 </html>
