commit to check changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <p>something to see that this works<p>
-	<p> just adding this to check git and all settings through to publish</p>
+	<p>just adding this to check git and all settings through to publish<p>
+		<p>And this<p>
 </body>
 </html>
