--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 
 </head>
 <body>
+	<div>
+		<img src="/img/ws_img_1.jpg" alt="Bikini Blackjack">
+	</div>
 <p>something to see that this works<p>
-	<p>just adding this to check git and all settings through to publish<p>
-		<p>And this<p>
+	<p> just adding this to check git and all settings through to publish</p>
 </body>
 </html>
