--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 <head>
 	<title>Bikini Blackjack</title>
 <link rel="stylesheet" type="text/css" href="index.css">
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
 
+			<div>
+				<h1>Bikini Blackjack</h1>
+			</div>
 </head>
 <body>
 	<div>
-		<img src="/img/ws_img_1.jpg" alt="Bikini Blackjack">
+		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
+
 	</div>
 <p>something to see that this works<p>
 	<p> just adding this to check git and all settings through to publish</p>
+
+<script type="text/javascript" src="index.js"></script>
+
+
 </body>
 </html>
