img & logo added

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
 	<title>Bikini Blackjack</title>
 <link rel="stylesheet" type="text/css" href="index.css">
-<script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="index.js"></script>
 
+			
 </head>
 <body>
+
+	<div class="image">
+
+		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
+
+		<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+
+	</div>
+
+
+
+	
 <p>something to see that this works<p>
 	<p> just adding this to check git and all settings through to publish</p>
+
+<script type="text/javascript" src="index.js"></script>
+
+
 </body>
 </html>
