updating Mon PM

--- a/index.html
+++ b/index.html
@@ -4,17 +4,9 @@
 	<title>Bikini Blackjack</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 
-<<<<<<< HEAD
-			<div>
-				<h1>Bikini Blackjack</h1>
-			</div>
-</head>
-<body>
-	<div>
-		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
 
-	</div>
-=======
+</head>
+
 			
 </head>
 <body>
@@ -23,16 +15,16 @@
 
 		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
 
-		<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+			<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+				
+				<table id="wrapper">
+					<tr>
+						<td><img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" /></td>
+					</tr>
+				</table>
 
 	</div>
 
-
-
-	
->>>>>>> master
-<p>something to see that this works<p>
-	<p> just adding this to check git and all settings through to publish</p>
 
 <script type="text/javascript" src="index.js"></script>
 
