added scoreboard to correct position

--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
 </head>
 <body>
 
-	<div class="image">
+<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px" class="background">
+
+			<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+
+
+<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" class="scoreboard" />
+
+
+
+<!-- 	<div class="image">
 
 		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
 
@@ -23,7 +32,14 @@
 					</tr>
 				</table>
 
-	</div>
+<div class="horizontal div1">
+	<div class="vertical">
+        <img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack"/>
+    </div>
+</div>
+
+
+	</div> -->
 
 
 <script type="text/javascript" src="index.js"></script>
