update - **ISSUE something went wrong - lost files

--- a/index.html
+++ b/index.html
@@ -4,23 +4,43 @@
 	<title>Bikini Blackjack</title>
 <link rel="stylesheet" type="text/css" href="index.css">
 
+
+</head>
+
 			
 </head>
 <body>
 
-	<div class="image">
+<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px" class="background">
+
+			<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+
+
+<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" class="scoreboard" />
+
+
+
+<!-- 	<div class="image">
 
 		<img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/ws_img_1.jpg" alt="Bikini Blackjack" height="1289px" width="1281px">
 
-		<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+			<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
+				
+				<table id="wrapper">
+					<tr>
+						<td><img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" /></td>
+					</tr>
+				</table>
 
-	</div>
+<div class="horizontal div1">
+	<div class="vertical">
+        <img src="file:///Users/paulpeterson/Documents/bikini_blackjack/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack"/>
+    </div>
+</div>
 
 
+	</div> -->
 
-	
-<p>something to see that this works<p>
-	<p> just adding this to check git and all settings through to publish</p>
 
 <script type="text/javascript" src="index.js"></script>
 
