--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
 
-<img src="https://github.com/superp72/bikini_blackjack/blob/master/img/ws_img_1.jpg" height="1289px" width="1281px" class="background">
+<img src="https://raw.githubusercontent.com/superp72/bikini_blackjack/master/img/ws_img_1.jpg" height="1289px" width="1281px" class="background">
 
 			<h2><span>Bikini Blackjack<span class='spacer'></span></h2>
 
 
-<img src="https://github.com/superp72/bikini_blackjack/blob/master/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" class="scoreboard" />
+<img src="https://raw.githubusercontent.com/superp72/bikini_blackjack/master/img/bikini_blackjack_board.jpg" alt ="Bikini Blackjack" class="scoreboard" />
 
 
 
